// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`teams tests - correct Tiltify team campaigns returned 1`] = `
{
  "amount_raised": {
    "currency": "USD",
    "value": "42.00",
  },
  "avatar": {
    "alt": "alt",
    "height": 64,
    "src": "https://assets.tiltify.com/uploads/team_event/avatar/3ede3704-076a-404d-b001-3ba03ce62b5b/blob-7b5d2340-5940-4377-99ff-883d75fa5f69.png",
    "width": 64,
  },
  "cause_id": "e11b36e3-02f7-4280-969f-9069cd2d55f0",
  "currency_code": "USD",
  "description": "Two small YouTubers/Streamers that want to make a difference because every bit counts!

We're both HUGE fans of Jacksepticeye and love to support Thankmas!",
  "donate_url": "https://donate.tiltify.com/+pandagirl-and-cryo-vision/pandagirl-and-cryovision",
  "fundraising_event_id": "4ffe1f38-1407-43a8-a44c-d3761a85be09",
  "goal": {
    "currency": "USD",
    "value": "100",
  },
  "has_schedule": false,
  "id": "3ede3704-076a-404d-b001-3ba03ce62b5b",
  "inserted_at": "2024-11-20T07:18:48Z",
  "legacy_id": 561718,
  "livestream": null,
  "name": "PandaGirl and Cryo_Vision",
  "original_goal": {
    "currency": "USD",
    "value": "100",
  },
  "published_at": "2024-12-04T13:58:55Z",
  "retired_at": null,
  "slug": "pandagirl-and-cryovision",
  "status": "published",
  "supportable": "private",
  "supporting_amount_raised": Any<Object>,
  "team": {
    "avatar": {
      "alt": "alt",
      "height": 200,
      "src": "https://assets.tiltify.com/assets/default_team_avatar.png",
      "width": 200,
    },
    "description": "Two small YouTubers/Streamers trying to make a difference because every bit counts! 

We're both HUGE fans of Jacksepticeye and love to support Thankmas.",
    "id": "e646a005-cc58-43c4-96f6-ed4d7fa68343",
    "legacy_id": 14849,
    "name": "PandaGirl and Cryo_vision",
    "slug": "pandagirl-and-cryo-vision",
    "social": {
      "discord": null,
      "facebook": null,
      "instagram": null,
      "snapchat": null,
      "tiktok": null,
      "twitch": null,
      "twitter": null,
      "website": null,
      "youtube": null,
    },
    "total_amount_raised": {
      "currency": "USD",
      "value": "42.00",
    },
    "url": "https://tiltify.com/+pandagirl-and-cryo-vision",
  },
  "team_id": "e646a005-cc58-43c4-96f6-ed4d7fa68343",
  "total_amount_raised": Any<Object>,
  "updated_at": "2024-12-05T15:32:11Z",
  "url": "https://tiltify.com/+pandagirl-and-cryo-vision/pandagirl-and-cryovision",
  "user": null,
  "user_id": null,
}
`;

exports[`teams tests - correct Tiltify team returned 1`] = `
{
  "avatar": {
    "alt": "alt",
    "height": 200,
    "src": "https://assets.tiltify.com/assets/default_team_avatar.png",
    "width": 200,
  },
  "description": "Two small YouTubers/Streamers trying to make a difference because every bit counts! 

We're both HUGE fans of Jacksepticeye and love to support Thankmas.",
  "id": "e646a005-cc58-43c4-96f6-ed4d7fa68343",
  "legacy_id": 14849,
  "name": "PandaGirl and Cryo_vision",
  "slug": "pandagirl-and-cryo-vision",
  "social": {
    "discord": null,
    "facebook": null,
    "instagram": null,
    "snapchat": null,
    "tiktok": null,
    "twitch": null,
    "twitter": null,
    "website": null,
    "youtube": null,
  },
  "total_amount_raised": Any<Object>,
  "url": "https://tiltify.com/+pandagirl-and-cryo-vision",
}
`;
